<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShopyTest</string>
    <string name="login">Log In</string>
    <string name="bienvenido_">Welcome to ShopyTest, log in here!</string>
    <string name="olvidecontraseñatexto">Forgot your password? Recover it here</string>
    <string name="cambiarcorreotexto">Change email address</string>
    <string name="correo_elec">Email</string>
    <string name="si_no_logue">If not logged in</string>
    <string name="google">Google</string>
    <string name="no_tienes_c">Don\'t have an account? Create one here</string>
    <string name="registrar_c">Register Account</string>
    <string name="registrar_">Here you can register your account</string>
    <string name="nombreuser">Username</string>
    <string name="register">Register</string>
    <string name="siyatienescuenta">If not registered</string>
    <string name="ya_tienes_c">Already have an account? Log in here</string>
    <string name="hombre">Male</string>
    <string name="mujer">Female</string>
    <string name="ninos">Children</string>
    <string name="nombreprenda1">Nike Shoes</string>
    <string name="precioprenda1">54.99 €</string>
    <string name="nombreprenda2">Nike Pants</string>
    <string name="precioprenda2">55.99 €</string>
    <string name="nombreprenda3">Nike Shirt</string>
    <string name="precioprenda3">56.99 €</string>
    <string name="default_web_client_id">455703258124-7djnab21ulvk8g9v2tfm3hblp9f5u0us.apps.googleusercontent.com</string>
    <string name="title_activity_menu_pantalla_admin">Admin Screen Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Clothes</string>
    <string name="menu_slideshow">Users</string>
    <string name="nombreadmincrearprenda">Name</string>
    <string name="precioadmincrearprenda">Price</string>
    <string name="descripcionadmincrearprenda">Description</string>
    <string name="tienerebajaadmincrearprenda">Has Discount</string>
    <string name="rebajaadmincrearprenda">Discount</string>
    <string name="botoncargarimagenadmincrearprenda">Upload Image</string>
    <string name="botonguardarcambiosadmincrearprenda">Save Changes</string>
    <string name="cestadecompratitulocarrito">Shopping Cart</string>
    <string name="totaltextocarrito">Total</string>
    <string name="cestadecomprapreciototalcarrito">USD 200$</string>
    <string name="botonpagartextocarrito">Pay</string>
    <string name="detalleprendaproductotitulo">Product Details</string>
    <string name="nombredelaprendadetalle">Clothing Name</string>
    <string name="descripciondelaprendadetalle">Description of the product goes here</string>
    <string name="preciodelaprendadetalle">USD 99$</string>
    <string name="botontextoañadircarrodetalleprenda">Add to Cart</string>
    <string name="eliminarprendasropaadmin">Delete Clothing Items</string>
    <string name="prendascondescuentoinicio">50% discount</string>
    <string name="botonmasinformaciontextoinicio">More Information</string>
    <string name="titulolistausuariosadmin">User List</string>
    <string name="contraseñalogin">Password</string>
    <string name="titulopaneladministrador">Administrator Panel</string>
    <string name="bienvenidoadmin">Welcome</string>
    <string name="botontextocrearprendaropa">Create Clothing Item</string>
    <string name="botonmodificarprendaropa">Modify Clothing Item</string>
    <string name="botontextoeliminarprendaropa">Delete Clothing Item</string>
    <string name="botontextoverusuarios">View Users</string>
    <string name="cerrarsesion">Log Out</string>
    <string name="editarperfiltitulo">Edit Profile</string>
    <string name="cambiarfotobotoneditarperfil">Change photo</string>
    <string name="camponombreperfil">Name</string>
    <string name="campoemailperfil">Email</string>
    <string name="campoidperfil">ID</string>
    <string name="botonguardarcambiosperfil">Save changes</string>
    <string name="tunombreperfil">Your name</string>
    <string name="tucuentaperfil">Your account</string>
    <string name="opcionmiperfil">My Profile</string>
    <string name="opcionmiscompras">My purchases</string>
    <string name="opcionIncidencia">Create Ticket</string>
    <string name="contraseñaregister">Password</string>
    <string name="repetircontraseñaregister">Repeat Password</string>
    <string name="nombreusuariolistaadminsrecicle">Username</string>
    <string name="correousuariolistaadminrecicle">email@example.com</string>
    <string name="botoneliminarprendaroparecicleview">Delete</string>
    <string name="inicio">Home</string>
    <string name="categoras">Categories</string>
    <string name="carrito">Cart</string>
    <string name="perfil">Profile</string>
    <string name="cargando">Loading…</string>


</resources>
