<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pantallamiperfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <View
        android:id="@+id/fondoverde"
        android:layout_width="wrap_content"
        android:layout_height="188dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="#1C756C" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/editarperfiltitulo"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/editarPerfilTitulo"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/volver"
        android:layout_width="26dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/volverperfil" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fotoperfil"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="127dp"
        android:background="@drawable/asd"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/imagenredonde"
        />

    <TextView
        android:id="@+id/cambiarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="258dp"
        android:text="@string/cambiarfotobotoneditarperfil"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/cambiarfoto"
        android:gravity="top"
        android:layout_below="@+id/fotoperfil"
        android:clickable="true"
        android:focusable="true"
        />



    <TextView
        android:id="@+id/nombredeusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="298dp"
        android:layout_below="@+id/cambiarfoto"
        android:text="@string/camponombreperfil"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/nombredeusuario"
        android:gravity="top"

        />

    <EditText
        android:id="@+id/nombrecuadro"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nombredeusuario"
        android:background="@drawable/nombrecuadro"
        android:paddingLeft="5dp"
        android:maxLength="20"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="389dp"
        android:text="@string/campoemailperfil"
        android:layout_below="@+id/nombrecuadro"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/nombredeusuario"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/emailcuadro"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:background="@drawable/nombrecuadro"
        android:inputType="none"
        android:paddingLeft="5dp"
        android:focusable="false"
        android:clickable="false"
        />

    <TextView
        android:id="@+id/cambiarcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/emailcuadro"
        android:text="@string/cambiarcorreotexto"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/cambiarcorreo"
        android:gravity="top"

        />

    <View
        android:id="@+id/guardardatos"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_below="@+id/cambiarcorreo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/guardardatos"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/textoguardardatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/botonguardarcambiosperfil"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cambiarcorreo"
        android:layout_marginTop="69dp"
        android:textAppearance="@style/textoguardardatos"
        android:gravity="top"
        />

</RelativeLayout>